# baza-backend

./: .gitignore  Dockerfile  Pipfile  README.md  balance_reminder.csv  example.env  manage.py  pyproject.toml  requirements.txt  start.sh  start_celery.sh  start_celery_beat.sh  uwsgi.ini
authclient/: __init__.py  apps.py  oauth2_validators.py  serializers.py  tasks.py  urls.py  utils.py  validators.py  views.py
bazaback/: api_urls.py  asgi.py  celery.py  imagesanitizer.py  routing.py  tokenauth.py  urls.py  wsgi.py
bazasignup/: __init__.py  apps.py  autoapproval.py  countries.py  models.py  permissions.py  reset_data.py  serializers.py  signals.py  staff_views.py  tasks.py  urls.py  user_views.py  utils.py  views.py
bounty/: __init__.py  apps.py  bounties.py  models.py  signals.py  tasks.py  utils.py
coinbasepay/: __init__.py  apps.py  dicts.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
coinpurchase/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
donation/: __init__.py  admin.py  apps.py  consumers.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
eblast/: apps.py  models.py
ekatagp/: models.py  views.py
fixtures/: system_user.json
group/: apps.py  consumers.py  models.py  permissions.py  serilaizers.py  signals.py  tasks.py  urls.py  utils.py  views.py
groupfaq/: apps.py  serializers.py  urls.py  views.py
groupnews/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
grouppost/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
hashtag/: models.py  urls.py  utils.py  views.py
landing/: urls.py  views.py
landingcontact/: apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
messenger/: consumers.py  models.py  permissions.py  serializers.py  urls.py  views.py
mockapi/: urls.py  views.py
notifications/: consumers.py  models.py  urls.py  utils.py  views.py
paypalpayment/: apps.py  urls.py  utils.py  views.py
phoneverification/: models.py  tasks.py  utils.py
proxcdb/: apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
publicusers/: __init__.py  apps.py  consumers.py  serializers.py  urls.py  views.py
static/: hashtag.css
stripepayment/: models.py  serializers.py  utils.py
taigaissuecreator/: __init__.py  apps.py  forms.py  models.py  tasks.py  (+4 more)
(+185 files in other folders)
